# rust-http-server

./: .env  .gitignore  Cargo.toml  README.md  http.txt  text.js
src/: index.rs  init.rs  lib.rs  main.rs
src/app/: index.rs  mod.rs  start.rs
src/init/: server.rs
src/utils/: helpers.rs  middleware.rs  mod.rs  request.rs  response.rs  router.rs
test_env/: index.html
