[package]
name = "rust-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
dotenv = "0.15.0"
futures = "0.3.31"
mime_guess = "2.0.5"
mongodb = "3.1.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
urlencoding = "2.1.3"
