[package]
name = "rust-express"
description = "An ExpressJS inspired rust crate that handles http request in a similar way to ExpressJS. Created entirely out of bordom, you can pull and expand it as you like!"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
mime_guess = "2.0.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
urlencoding = "2.1.3"
